k8s/keycloak/kc-service.yml
apiVersion: v1
kind: Service
metadata:
    name: kc-service
spec:
  type: ClusterIP
  selector:
    app: boilerplate
    tier: kc-deployment
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
