k8s/keycloak/kc-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kc-ingress
  annotations:
    traefik.frontend.rule.type: PathPrefix
spec:
  rules:
  - host: kc.rancher.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kc-service
            port: 
              number: 8080
